# March

./: .gitignore  .gitmodules  CMakeLists.txt  March_X.7z  Readme.MD  config.cmake  tools.cmake  tools.cmd  xFile.py
FileHandler/: CMakeLists.txt  readme.md
FileHandler/include/FH/: FileHandler.h  FileHandlerAPI.h
FileHandler/src/: FileHandler.cpp
HardwareControl/: CMakeLists.txt  readme.md
HardwareControl/include/HC/: Hardware.h  HardwareAPI.h
HardwareControl/src/: Hardware.cpp
MEngine/: CMakeLists.txt  readme.md
MEngine/include/Eng/: MEngineAPI.h
MEngine/include/Eng/Command/: AddEntityCmd.h  Command.h  CommandManager.h  DelEntityCmd.h  MoveEntityCmd.h  RotateEntityCmd.h  TransformCmd.h
MEngine/include/Eng/DrawData/: ArcData.h  CircleData.h  DrawData.h  ImageData.h  LineData.h  LinesData.h  PointData.h
MEngine/include/Eng/Entity/: Arc.h  Circle.h  CubicBSpline.h  CubicBezier.h  Ellipse.h  Entity.h  Image.h  Line.h  Point.h  PolyBspline.h  PolyLine.h  Polygon.h  Rectangle.h  Text.h
MEngine/include/Eng/Scene/: EntityIndex.h  Group.h  IndexDef.h  Layer.h  OrderManager.h  Previews.h  Scene.h  SceneComponent.h  SceneData.h
MEngine/include/Eng/Scene/Layer/: Layer.h  LayerManager.h
MEngine/src/Command/: AddEntityCmd.cpp  CommandManager.cpp  DelEntityCmd.cpp  TransformCmd.cpp
MEngine/src/DrawData/: ArcData.cpp  CircleData.cpp  DrawData.cpp  ImageData.cpp  LineData.cpp  LinesData.cpp  PointData.cpp
MEngine/src/Entity/: Arc.cpp  Circle.cpp  CubicBSpline.cpp  CubicBezier.cpp  Ellipse.cpp  Entity.cpp  Image.cpp  Line.cpp  Point.cpp  PolyBspline.cpp  PolyLine.cpp  Polygon.cpp  Rectangle.cpp  Text.cpp
MEngine/src/Scene/: EntityIndex.cpp  Group.cpp  Layer.cpp  LayerManager.cpp  OrderManager.cpp  Previews.cpp  Scene.cpp  SceneData.cpp
MEngine/src/View/: GLView.cpp
MEngine/tests/: CMakeLists.txt
MEngine/tests/Command/: AddEntityCmdTest.cpp  CommandManagerTest.cpp  DelEntityCmdTest.cpp
MEngine/tests/DrawData/: ArcDataTest.cpp  CircleDataTest.cpp  DrawDataTest.cpp  LineDataTest.cpp  PointDataTest.cpp
MEngine/tests/Entity/: ArcTest.cpp  CircleTest.cpp  LineTest.cpp  PointTest.cpp  PolyBsplineTest.cpp  PolyLineTest.cpp  TextTest.cpp
MEngine/tests/Scene/: EntityIndexTest.cpp  GroupTest.cpp  LayerTest.cpp  OrderManagerTest.cpp  SceneTest.cpp
MLog/: .gitignore  CMakeLists.txt  readme.md
MLog/include/MLog/: Logger.h  MLogAPI.h
MLog/src/: Logger.cpp
MRender/: CMakeLists.txt
MRender/include/Render/: MRenderAPI.h  MarchView.h
MRender/include/Render/Shader/: ShaderDef.h
MRender/res/shader/: vertex_shader.glsl
MRender/src/: MarchView.cpp
MRender/src/Render/Shader/: crossFS.cpp  crossVS.cpp  imgFS.cpp  imgVS.cpp  lineFS.cpp  lineVS.cpp  linesFS.cpp  linesVS.cpp  rulerFS.cpp  rulerVS.cpp
MRenderInterface/: CMakeLists.txt
MRenderInterface/include/RI/: IRenderInterface.h
March/: .gitmodules  CMakeLists.txt
March/include/: def.h
March/res/: resources.qrc
March/res/theme/: AMOLED.qss
March/src/: MainWindow.cpp  MainWindow.h  PreInit.h  main.cpp
March/src/BaseWidget/: DrawAction.cpp  DrawAction.h  ResetSlider.cpp  ResetSlider.h  TimerButton.cpp  TimerButton.h
March/src/BottomColorLayer/: ColorLayerBar.cpp  ColorLayerBar.h
March/src/BottomStatusInfoBar/: CoordInfoMsg.cpp  CoordInfoMsg.h  HardMsg.cpp  HardMsg.h  ItemsMsg.cpp  ItemsMsg.h  ProgressMsg.cpp  ProgressMsg.h  StatusInfoBar.cpp  StatusInfoBar.h
March/src/LeftDrawToolBar/: DrawToolBar.cpp  DrawToolBar.h
March/src/Menu/: MenuBar.cpp  MenuBar.h
March/src/Network/: TimeChecker.cpp  TimeChecker.h
March/src/Operation/: OptBase.cpp  OptBase.h  OptManager.cpp  OptManager.h
March/src/Operation/Draw/: OptDrawArc.cpp  OptDrawArc.h  OptDrawBezierCurve.cpp  OptDrawBezierCurve.h  OptDrawCircle.cpp  OptDrawCircle.h  OptDrawCubicBezier.cpp  OptDrawCubicBezier.h  OptDrawEllipse.cpp  OptDrawEllipse.h  OptDrawImage.cpp  OptDrawImage.h  OptDrawLine.cpp  OptDrawLine.h  OptDrawPoint.cpp  OptDrawPoint.h  OptDrawPolyLine.cpp  OptDrawPolyLine.h  OptDrawPolygon.cpp  OptDrawPolygon.h  OptDrawRectangle.cpp  OptDrawRectangle.h  OptDrawSpline.cpp  OptDrawSpline.h  OptDrawText.cpp  OptDrawText.h
March/src/Operation/Select/: OptSelect.cpp  OptSelect.h
March/src/OptAdapter/: EntityDrawAdapter.cpp  EntityDrawAdapter.h  FileAdapter.cpp  FileAdapter.h  LayerAdapter.cpp  LayerAdapter.h  MsgAdapter.cpp  MsgAdapter.h
March/src/RightHardInfoDock/: HardInfoDock.cpp  HardInfoDock.h
March/src/TopInfoToolBar/: InfoToolBar.cpp  InfoToolBar.h
March/src/Widgets/: TipWidget.cpp  TipWidget.h
March/src/Widgets/RenderView/: ViewWrapper.cpp  ViewWrapper.h
March/tests/: CMakeLists.txt
Utility/: CMakeLists.txt  readme.md
Utility/include/Ut/: Matrix.h  Rect.h  RectGROK.h  RectKimi.cpp  Vec.h  Vec.inl  tools.h
Utility/include/Ut/XCEntity/: XCArc.h  XCCircle.h  XCEntity.h  XCLine.h  XCPoint.h  XCPolyBspline.h  XCPolyLine.h  XCText.h
Utility/src/: Matrix.cpp  Rect.cpp
Utility/src/XCEntity/: XCArc.cpp  XCCircle.cpp  XCLine.cpp  XCPoint.cpp  XCPolyBspline.cpp  XCPolyLine.cpp  XCText.cpp
Utility/tests/: CMakeLists.txt  MatrixTest.cpp  MatrixTestEx.cpp  RectTest.cpp  VecTest.cpp  VecTest2.cpp  tools_test.cpp
Utility/tests/XCEntity/: XCArcTest.cpp  XCCircleTest.cpp  XCLineTest.cpp  XCPointTest.cpp  XCPolyBsplineTest.cpp  XCPolyLineTest.cpp  XCTextTest.cpp
